[gd_scene load_steps=12 format=3 uid="uid://dv58hcp37fnri"]

[ext_resource type="Script" path="res://scripts/mobile_ui.gd" id="1_rvv1d"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="2_snoiw"]
[ext_resource type="Texture2D" uid="uid://do55skr27qvfd" path="res://images/arrow_n.png" id="3_nee3u"]
[ext_resource type="StyleBox" uid="uid://vb5n0pdp6vf" path="res://sprites/mobile_button_normal.tres" id="4_m1a23"]
[ext_resource type="Texture2D" uid="uid://b2y7hrpauia37" path="res://images/mobile_button.png" id="5_pwq8n"]
[ext_resource type="Texture2D" uid="uid://b3yvdhkilwb4o" path="res://images/tool_sword_b.png" id="6_qsdwx"]
[ext_resource type="Script" path="res://scripts/restart_ui.gd" id="7_050ly"]
[ext_resource type="PackedScene" uid="uid://cgu2unw740vuf" path="res://scenes/notification.tscn" id="8_ijt5e"]
[ext_resource type="PackedScene" uid="uid://c37vas4dihnt4" path="res://scenes/health_ui.tscn" id="9_begv2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_43wfq"]
texture = ExtResource("5_pwq8n")

[sub_resource type="Theme" id="Theme_0j376"]
Button/styles/disabled = ExtResource("4_m1a23")
Button/styles/focus = ExtResource("4_m1a23")
Button/styles/hover = ExtResource("4_m1a23")
Button/styles/normal = ExtResource("4_m1a23")
Button/styles/pressed = SubResource("StyleBoxTexture_43wfq")

[node name="UIContainer" type="Panel"]
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0
scale = Vector2(3, 3)
metadata/_edit_use_anchors_ = true

[node name="MobileUI" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = -0.5
offset_top = -0.5
offset_right = -0.5
offset_bottom = -0.5
script = ExtResource("1_rvv1d")

[node name="Virtual Joystick2" parent="MobileUI" instance=ExtResource("2_snoiw")]
layout_mode = 1
offset_left = -192.167
offset_top = 70.5
offset_right = 107.833
offset_bottom = 370.5
scale = Vector2(0.3, 0.3)
visibility_mode = 1

[node name="JumpButton" type="CenterContainer" parent="MobileUI"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 171.833
offset_top = 101.833
offset_right = 221.833
offset_bottom = 151.833

[node name="TextureRect2" type="TextureRect" parent="MobileUI/JumpButton"]
custom_minimum_size = Vector2(40, 50)
layout_mode = 2
texture = ExtResource("3_nee3u")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="MobileUI/JumpButton"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_0j376")

[node name="PanelContainer" type="PanelContainer" parent="MobileUI/JumpButton"]
layout_mode = 2

[node name="CrouchUI" type="CenterContainer" parent="MobileUI"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 148.833
offset_top = 70.5
offset_right = 188.833
offset_bottom = 110.5

[node name="TextureRect2" type="TextureRect" parent="MobileUI/CrouchUI"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_nee3u")
expand_mode = 1
stretch_mode = 5
flip_v = true

[node name="Button" type="Button" parent="MobileUI/CrouchUI"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = SubResource("Theme_0j376")

[node name="PanelContainer" type="PanelContainer" parent="MobileUI/CrouchUI"]
layout_mode = 2

[node name="AttackButton" type="CenterContainer" parent="MobileUI"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 185.833
offset_top = 60.5
offset_right = 225.833
offset_bottom = 100.5

[node name="TextureRect2" type="TextureRect" parent="MobileUI/AttackButton"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("6_qsdwx")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="Button" type="Button" parent="MobileUI/AttackButton"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme = SubResource("Theme_0j376")

[node name="RestartUI" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_050ly")

[node name="Button" type="Button" parent="RestartUI"]
layout_mode = 2
text = "RESTART
"

[node name="Notification" parent="." instance=ExtResource("8_ijt5e")]
layout_mode = 1

[node name="HealthUI" parent="." instance=ExtResource("9_begv2")]

[editable path="MobileUI/Virtual Joystick2"]
